# sdk-alif

./: .checkpatch.conf  Jenkinsfile  README.md  compose.yaml  west.yml
applications/testapp/: CMakeLists.txt  overlay-sed.conf  readme.rst
applications/testapp/boards/: alif_b1_dk_ab1c1f4m51820hh0_rtss_he.conf  alif_b1_eb_ab1c1f4m51820ph0_rtss_he.conf
applications/testapp/src/: main.c
automation/: Jenkinsfile_Pr  ble_samples.groovy
automation/pytest/: common_utils.py  conftest.py  pytest_ini.template  requirements.txt
automation/pytest/helpers/: connection.py
automation/pytest/smoke_test/: test_help.py
automation/pytest/tests/: L2CAP_test.py  basic_ble_test.py
boards/alif/alif_b1_eb/: Kconfig.alif_b1_eb  alif_b1_eb_ab1c1f4m51820hh0_rtss_he.dts  alif_b1_eb_ab1c1f4m51820hh0_rtss_he.yaml  alif_b1_eb_ab1c1f4m51820ph0_rtss_he.dts  alif_b1_eb_ab1c1f4m51820ph0_rtss_he.yaml  alif_b1_eb_ab1c1f4m51820ph0_rtss_he_defconfig  balletto-eb-pinctrl.dtsi  board.yml
doc/appnotes/source/: adc.rst  ble.rst  cmp.rst  conf.py  crc.rst  dac.rst  dma.rst  ensemble_pins.rst  entropy.rst  ethernet.rst  ethos.rst  helloworld_ospi.rst  hwsem.rst  i2c.rst  i2s.rst  i3c.rst  index.rst  isp.rst  links.txt  lp_i2c.rst  lp_rtc.rst  lp_timer.rst  mhu.rst  mipi_camera.rst  mram.rst  note.rst  ospi_flash.rst  parallel_camera.rst  parallel_display.rst  pdm.rst  power_management.rst  prerequisites.rst  psram.rst  pwm.rst  qdec.rst  sdmmc.rst  se_tool_flash.rst  serial_display.rst  spi.rst  touchscreen.rst  (+5 more)
doc/release_notes/source/: conf.py  index.rst  links.txt  release_note.rst
doc/sdk/: boards.rst  conf.py
doc/user_guide/source/: building_and_flashing.rst  conf.py  index.rst  introduction.rst  links.txt  overview.rst
drivers/i2s/i2s_sync/: i2s_sync.c  i2s_sync_int.h
include/alif/bluetooth/: bt_adv_data.h  bt_scan_rsp.h
include/ethosu/: InferenceRunner.h
samples/bluetooth/common/: CMakeLists.txt  batt_cli.c  batt_cli.h  batt_svc.c  batt_svc.h  ble_gpio.c  ble_gpio.h  central_itf.c  central_itf.h  client_profile_manager.c  client_profile_manager.h  gapm_api.c  gapm_api.h  gapm_sec.c  gapm_sec.h  power_mgr.c  power_mgr.h
samples/bluetooth/le_audio/auracast/: CMakeLists.txt  Kconfig  README.rst  lpuart.overlay  prj.conf
samples/bluetooth/le_audio/auracast/auracast_scan_delegator/: auracast_sd.c
samples/bluetooth/le_audio/auracast/auracast_sink/: auracast_sink.c
samples/bluetooth/le_audio/auracast/boards/: alif_b1_dk.overlay  alif_b1_dk_ab1c1f4m51820ph0_rtss_he.overlay  alif_b1_eb_ab1c1f4m51820ph0_rtss_he.overlay
samples/bluetooth/le_audio/auracast/src/: auracast_shell.c  main.c
samples/bluetooth/le_audio/unicast_sink/: CMakeLists.txt  Kconfig  bidir.conf  dmas.overlay
samples/bluetooth/le_audio/unicast_source/: Kconfig  bidir.conf
samples/bluetooth/le_central_batt/: CMakeLists.txt  README.rst  prj.conf
samples/bluetooth/le_central_batt/src/: main.c
samples/bluetooth/le_periph/src/: main.c
samples/bluetooth/le_periph_batt/src/: main.c
samples/bluetooth/le_periph_blinky/boards/: alif_b1_dk_ab1c1f4m51820hh0_rtss_he.overlay  alif_b1_dk_ab1c1f4m51820ph0_rtss_he.overlay  alif_b1_eb_ab1c1f4m51820ph0_rtss_he.overlay
samples/bluetooth/le_periph_blinky/src/: main.c
samples/bluetooth/le_periph_blps/src/: main.c
samples/bluetooth/le_periph_cgms/inc/: cgms_app.h
samples/bluetooth/le_periph_cgms/src/: cgms_rom_1_2.c  main.c
samples/bluetooth/le_periph_cpps/src/: main.c
samples/bluetooth/le_periph_cscps/src/: main.c
samples/bluetooth/le_periph_glps/: prj.conf
samples/bluetooth/le_periph_glps/src/: main.c
samples/bluetooth/le_periph_hello/src/: main.c
samples/bluetooth/le_periph_hr/src/: main.c
samples/bluetooth/le_periph_mcs/: CMakeLists.txt  prj.conf
samples/bluetooth/le_periph_past/: prj.conf
samples/bluetooth/le_periph_pm/: CMakeLists.txt  Kconfig  README.rst  itcm_build.overlay  prj.conf
samples/bluetooth/le_periph_prxp/: prj.conf
samples/bluetooth/le_periph_vcp/: CMakeLists.txt  README.rst  prj.conf
samples/bluetooth/le_throughput/: CMakeLists.txt  Kconfig
samples/bluetooth/smp_svr/: README.rst
samples/drivers/adc/: prj.conf
samples/drivers/cmp/: README.rst  prj.conf
samples/drivers/i2c_dw/: README.rst
samples/drivers/video/: README.rst  prj.conf
samples/matter/: matter.rst
samples/matter/light-bulb/: CMakeLists.txt  Kconfig  prj.conf  readme.rst
samples/matter/light-bulb/boards/: alif_b1_dk_ab1c1f4m51820ph0_rtss_he.overlay  alif_b1_eb_ab1c1f4m51820ph0_rtss_he.overlay
samples/matter/light-bulb/src/: AppTask.cpp  lighting-app.matter  lighting-app.zap
samples/matter/light-switch/: Kconfig  prj.conf  readme.rst
samples/modules/tflite-micro/alif_inference/: CMakeLists.txt  Kconfig  prj.conf  readme.rst
samples/modules/tflite-micro/alif_inference/src/: BufAttributes.hpp  KWSModel.cpp  KWSModel.h  LiveMicInput.cpp  LiveMicInput.h  main.cpp
samples/modules/tflite-micro/tflm_transformer/: CMakeLists.txt  Kconfig  README.md  prj.conf  sample.yaml
samples/modules/tflite-micro/tflm_transformer/boards/: alif_e8_dk_rtss_he.overlay  enable_ethosu85.overlay
samples/modules/tflite-micro/tflm_transformer/src/: inference_process_bert.cpp  main.cpp
scripts/matter/: matter_env_setup.sh
snippets/ethos-u55-enable/: snippet.overlay  snippet.yml
snippets/ethos-u85-enable/: snippet.overlay  snippet.yml
snippets/pm-ble/: sleep.conf  sleep.overlay  snippet.yml
snippets/pm-system-off-he/: prj.conf  snippet.overlay  snippet.yml
snippets/pm-system-off-hp/: snippet.overlay  snippet.yml
snippets/zephyr-bluetooth-shell/: ble-shell.conf  snippet.yml
subsys/bluetooth/host/: CMakeLists.txt  bt_ad_data.c  bt_ad_data.h  bt_adv_data.c  bt_scan_rsp.c
subsys/bluetooth/le_audio/: Kconfig  audio_decoder.c  audio_encoder.c  audio_i2s_common.c  audio_sink_i2s.c  audio_source_i2s.c  iso_datapath_ctoh.c  iso_datapath_htoc.c
subsys/bluetooth/shell/: bt.c
subsys/matter/common/: MatterStack.cpp
subsys/matter/pwmdevice/: PWMDevice.cpp
subsys/powermgr/pm/: power_mgr.c
tests/drivers/hwsem/: testcase.yaml
zephyr/: module.yml
(+114 files in other folders)
